# thaw

./: .gitignore  CLAUDE.md  Makefile  SUBMISSION.md  package.json  prd.md  rustfmt.toml
.claude/commands/: casper-status.md  deploy.md  localnet.md
.claude/skills/casper-deploy/: SKILL.md
contracts/: Cargo.toml  Odra.toml
contracts/src/: auction_interface.rs  errors.rs  events.rs  lending_pool.rs  lib.rs  thaw_core.rs  thcspr_token.rs
contracts/tests/: admin_tests.rs  claim_tests.rs  compound_tests.rs  integration_tests.rs  stake_tests.rs  unstake_tests.rs
contracts/tests/test_utils/: mock_auction.rs  mod.rs
contracts/wasm/: LendingPool.wasm  ThCsprToken.wasm  ThawCore.wasm
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/borrow/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/lend/: page.tsx
frontend/src/app/leverage/: page.tsx
frontend/src/components/: connect-button.tsx  health-factor.tsx  navigation.tsx  network-selector.tsx  transaction-toast.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: useCasperWallet.ts
frontend/src/lib/: casper.ts  utils.ts
frontend/src/providers/: index.tsx  wallet-provider.tsx
frontend/src/types/: index.ts
